canary/ingress/ingress-svc-atual.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-atual
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-clusterip-v1
            port:
              number: 80
